# mangacross-rss

./: .gitignore  Cargo.toml  feed.xml  index.html
.github/workflows/: update-rss.yml
shiomai/: feed.xml
src/: main.rs  manga_cross.rs  mangacross.rs
yabai/: feed.xml
