[package]
name = "bokuyaba-rss"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.6"
reqwest = "0.11.9"
rss = "2.0.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.21"
env_logger = "0.9.0"
log = "0.4.14"
